--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 aiogram>=3.2.0
 aiohttp
-apscheduler
-apscheduler-redis # <-- ДОБАВЛЕНА ЭТА СТРОКА
+APScheduler[redis]>=3.11.0
 beautifulsoup4
 lxml
 bleach
@@ -13,5 +12,4 @@ matplotlib
 openai
 pydantic-settings
 pydantic
-redis>=5.0.0
 async-lru
