--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,8 @@ services:
   - type: worker
     name: cryptobot
     env: python
-    plan: free
+    # ИСПРАВЛЕНИЕ: Указываем платный тариф, соответствующий вашему Pro-плану
+    plan: pro 
     
     buildCommand: "pip install -r requirements.txt && playwright install"
     startCommand: "python -m bot.main"
