Refactor: Переход на нативную Python-среду, подготовка к graceful shutdown

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
-# Файл с секретными ключами
+# Файл с секретами
 .env
 
-# Системные папки и файлы Python
+# Кэш и артефакты Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
 
-# Папки виртуального окружения
-venv/
+# Виртуальные окружения
 .venv/
+venv/
+env/
+
+# Артефакты редакторов
+.vscode/
+.idea/
