Fix: Указана полная версия Python в render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,8 @@ services:
     
     envVars:
       - key: PYTHON_VERSION
-        value: '3.11'
+        # ИСПРАВЛЕНИЕ: Указываем полную версию Python
+        value: '3.11.5'
       # Объявляем ключи для секретов и задаем пустые значения-заглушки.
       # Реальные значения будут подставлены из панели Environment в Render.
       - key: BOT_TOKEN
