--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,11 @@
 aiogram>=3.2.0
-aiohttp
+aiohttp>=3.8.0
 APScheduler[redis]>=3.11.0
 beautifulsoup4
 lxml
-bleach
 python-dotenv
-feedparser
-fuzzywuzzy
-python-Levenshtein
-matplotlib
 openai
 pydantic-settings
 pydantic
 async-lru
-backoff
 rapidfuzz
