--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 aiogram>=3.2.0
-aiohttp>=3.8.0
+aiohttp
 APScheduler[redis]>=3.11.0
 beautifulsoup4
 lxml
+bleach
 python-dotenv
+feedparser
+fuzzywuzzy
+python-Levenshtein
+matplotlib
 openai
 pydantic-settings
 pydantic
 async-lru
+backoff
 rapidfuzz
-backoff>=2.0.0
