Полный архитектурный рефакторинг проекта на 2025 год

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# ===============================================================
+# Файл: .gitignore (ПРОДАКШН-ВЕРСИЯ 2025)
+# Описание: Стандартный файл для исключения ненужных и 
+# секретных файлов из системы контроля версий Git.
+# ===============================================================
+
 # Файлы виртуального окружения
 venv/
 .venv/
@@ -5,6 +11,8 @@ env/
 .env/
 */venv/
 */.venv/
+env.bak/
+venv.bak/
 
 # Файлы кэша Python
 __pycache__/
@@ -14,6 +22,8 @@ __pycache__/
 # Файлы настроек IDE
 .idea/
 .vscode/
+*.swp
+*.swo
 
 # Локальные настройки и секреты
 .env
@@ -21,13 +31,16 @@ __pycache__/
 .env.*
 config.ini
 settings.local.py
+secrets.toml
 
 # Логи
 *.log
+logs/
 
 # Базы данных
 *.sqlite3
 *.db
+*.db-journal
 
 # Зависимости (их нужно хранить в requirements.txt)
 /deps/
