--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,53 @@
+# ===============================================================
+# Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ 2025)
+# Описание: Список всех необходимых Python-библиотек для установки.
+# ===============================================================
+
+# Основной фреймворк для Telegram-бота
 aiogram>=3.2.0
+
+# Асинхронные HTTP-запросы
 aiohttp
+
+# Планировщик задач с поддержкой Redis
 APScheduler[redis]>=3.11.0
+
+# Парсинг HTML
 beautifulsoup4
 lxml
+
+# Очистка HTML от вредоносных тегов
 bleach
+
+# Работа с .env файлами для локальной разработки
 python-dotenv
+
+# Парсинг RSS-лент
 feedparser
+
+# Библиотеки для нечеткого сравнения строк (нужны для rapidfuzz)
 fuzzywuzzy
 python-Levenshtein
+
+# Создание графиков и изображений
 matplotlib
+
+# Клиенты для API генеративных моделей
 openai
-pydantic-settings
+
+# Валидация данных и работа с настройками
 pydantic
+pydantic-settings
+
+# Асинхронный LRU-кэш в памяти
 async-lru
+
+# Реализация экспоненциальной задержки для повторных запросов
 backoff
+
+# Высокопроизводительная библиотека для нечеткого сравнения строк
 rapidfuzz
+
+# Синхронные HTTP-запросы (могут быть полезны для некоторых API)
 requests
+
