--- a/render.yaml
+++ b/render.yaml
@@ -1,30 +1,66 @@
+# ===============================================================
+# Файл: render.yaml (ПРОДАКШН-ВЕРСИЯ 2025)
+# Описание: Конфигурация для развертывания бота и его базы
+# данных Redis на платформе Render.com.
+# ===============================================================
+
 services:
-  # Сервис для нашего бота, работающий в нативной среде Python
+  # 1. База данных Redis для хранения всех данных бота
+  - type: redis
+    name: cryptobot-redis
+    region: frankfurt # Европейский регион для лучшей производительности
+    plan: free # Бесплатного плана достаточно для старта
+    ipAllowList: [] # Разрешить доступ отовсюду (Render защищает внутреннюю сеть)
+    maxmemoryPolicy: allkeys-lru # Стратегия вытеснения данных при заполнении памяти
+
+  # 2. Основное приложение бота (воркер)
   - type: worker
-    name: cryptobot
+    name: cryptobot-worker
+    region: frankfurt
     runtime: python
-    plan: starter # Starter плана достаточно для этой конфигурации
+    plan: starter
     
-    # Правильная, упрощенная команда сборки БЕЗ PLAYWRIGHT
+    # Команда для установки зависимостей при каждом развертывании
     buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
     
+    # Команда для запуска основного файла бота
     startCommand: "python -m bot.main"
     
     envVars:
+      # --- Системные переменные ---
       - key: PYTHON_VERSION
-        # ИСПРАВЛЕНИЕ: Указываем полную версию Python
         value: '3.11.5'
-      # Объявляем ключи для секретов и задаем пустые значения-заглушки.
-      # Реальные значения будут подставлены из панели Environment в Render.
+      
+      # --- Переменные для подключения к сервисам ---
+      - key: REDIS_URL
+        fromService:
+          type: redis
+          name: cryptobot-redis
+          property: connectionString
+
+      # --- Ключи API и настройки бота ---
+      # Эти значения нужно будет заполнить в панели управления Render
+      # в разделе "Environment".
       - key: BOT_TOKEN
         value: "" 
-      - key: REDIS_URL
-        value: ""
       - key: ADMIN_CHAT_ID
         value: ""
+      - key: ADMIN_USER_IDS
+        value: "" # Пример: "12345,67890"
       - key: NEWS_CHAT_ID
         value: ""
-      - key: CMC_API_KEY
+      
+      # --- API ключи для внешних сервисов ---
+      - key: GEMINI_API_KEY
         value: ""
       - key: OPENAI_API_KEY
         value: ""
+      - key: CMC_API_KEY
+        value: ""
+      - key: CRYPTOCOMPARE_API_KEY
+        value: ""
+      - key: BLOCKCHAIR_API_KEY
+        value: "" # Необязательно, но рекомендуется
+      - key: GLASSNODE_API_KEY
+        value: "" # Необязательно, но рекомендуется
+
