--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,10 @@
-# ===============================================================
-# Файл: requirements.txt (ПРОДАКШН-ВЕРСИЯ 2025)
-# Описание: Список всех необходимых Python-библиотек для установки.
-# ===============================================================
-
-# Основной фреймворк для Telegram-бота
-aiogram>=3.2.0
-
-# Асинхронные HTTP-запросы
-aiohttp
-
-# Планировщик задач с поддержкой Redis
-APScheduler[redis]>=3.11.0
-
-# Парсинг HTML
-beautifulsoup4
-lxml
-
-# Очистка HTML от вредоносных тегов
-bleach
-
-# Работа с .env файлами для локальной разработки
-python-dotenv
-
-# Парсинг RSS-лент
-feedparser
-
-# Библиотеки для нечеткого сравнения строк (нужны для rapidfuzz)
-fuzzywuzzy
-python-Levenshtein
-
-# Создание графиков и изображений
-matplotlib
-
-# Клиенты для API генеративных моделей
-openai
-
-# Валидация данных и работа с настройками
-pydantic
-pydantic-settings
-
-# Асинхронный LRU-кэш в памяти
-async-lru
-
-# Реализация экспоненциальной задержки для повторных запросов
-backoff
-
-# Высокопроизводительная библиотека для нечеткого сравнения строк
-rapidfuzz
-
-# Синхронные HTTP-запросы (могут быть полезны для некоторых API)
-requests
-
+aiogram==3.7.0
+redis==5.0.4
+pydantic==2.7.4
+pydantic-settings==2.3.4
+apscheduler==3.10.4
+google-generativeai==0.7.0
+aiohttp==3.9.5
+python-dotenv==1.0.1
+beautifulsoup4==4.12.3
+lxml==5.2.2
