--- a/data/crypto_center_config.json
+++ b/data/crypto_center_config.json
@@ -1,5 +1,5 @@
 {
-  "alpha_cache_ttl_seconds": 14400,
-  "feed_cache_ttl_seconds": 900,
-  "news_context_limit": 20
+  "news_context_limit": 15,
+  "alpha_cache_ttl_seconds": 7200,
+  "feed_cache_ttl_seconds": 1800
 }
