--- a/data/throttling_config.json
+++ b/data/throttling_config.json
@@ -1,7 +1,5 @@
 {
-  "trust_score_high_threshold": 150,
-  "trust_score_low_threshold": 50,
-  "rate_limit_high_trust": 0.5,
-  "rate_limit_normal": 1.0,
-  "rate_limit_low_trust": 2.5
+  "rate_limit": 0.5,
+  "user_rate_limit": 2,
+  "chat_rate_limit": 5
 }
