feat: Implement full 'Genius 2.0' system

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ aiohttp==3.9.5
 python-dotenv==1.0.1
 beautifulsoup4==4.12.3
 lxml==5.2.2
-rapidfuzz==3.13.0  # <-- Добавленная и зафиксированная зависимость
+rapidfuzz==3.13.0
+backoff==2.2.1  # <-- Добавленная зависимость для отказоустойчивости сетевых запросов
