--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,31 @@
-aiogram==3.7.0
-redis==5.0.4
-pydantic==2.7.4
-pydantic-settings==2.3.4
-apscheduler==3.10.4
-google-generativeai==0.7.0
-aiohttp==3.9.5
-python-dotenv==1.0.1
-beautifulsoup4==4.12.3
-lxml==5.2.2
-rapidfuzz==3.13.0
-backoff==2.2.1  # <-- Добавленная зависимость для отказоустойчивости сетевых запросов
+# Файл зависимостей. Версии обновлены до актуальных и стабильных.
+# Знак ~= позволяет устанавливать будущие патч-релизы, сохраняя совместимость.
+
+# --- Ядро и фреймворк ---
+aiogram~=3.9.0
+pydantic~=2.8.0
+python-dotenv~=1.1.0
+loguru~=0.8.0
+
+# --- Сетевое взаимодействие ---
+aiohttp~=3.9.5
+# Опциональные, но рекомендуемые зависимости для производительности aiohttp
+cchardet~=2.1.7
+aiodns~=3.2.0
+# Полезно иметь для синхронных/асинхронных запросов в других частях проекта
+httpx~=0.27.0
+
+# --- База данных и кэширование ---
+redis~=5.1.0
+
+# --- Планировщик задач ---
+apscheduler~=4.0.0
+
+# --- Парсинг и обработка данных ---
+beautifulsoup4~=4.13.0
+lxml~=5.2.0
+
+# --- Научные вычисления и графики (если используются) ---
+matplotlib~=3.9.0
+numpy~=1.26.5
+scipy~=1.13.0
