feat: Implement full 'Genius 2.0' system

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-# Файл зависимостей. Версии обновлены до актуальных и стабильных.
-# Знак ~= позволяет устанавливать будущие патч-релизы, сохраняя совместимость.
+# Файл зависимостей. Версии скорректированы для успешной сборки на Render.
+# Основное исправление - версия loguru.
 
 # --- Ядро и фреймворк ---
 aiogram~=3.9.0
-pydantic~=2.8.0
-python-dotenv~=1.1.0
-loguru~=0.8.0
+pydantic~=2.8.2
+python-dotenv~=1.1.1
+loguru~=0.7.2 # ИСПРАВЛЕНО: Указана последняя стабильная версия, доступная для установки.
 
 # --- Сетевое взаимодействие ---
 aiohttp~=3.9.5
