feat: Implement full 'Genius 2.0' system

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Файл зависимостей. Версии скорректированы для успешной сборки на Render.
-# Основное исправление - версия loguru.
+# Основное исправление - версия apscheduler.
 
 # --- Ядро и фреймворк ---
 aiogram~=3.9.0
 pydantic~=2.8.2
 python-dotenv~=1.1.1
-loguru~=0.7.2 # ИСПРАВЛЕНО: Указана последняя стабильная версия, доступная для установки.
+loguru~=0.7.2
 
 # --- Сетевое взаимодействие ---
 aiohttp~=3.9.5
@@ -19,7 +19,7 @@ httpx~=0.27.0
 redis~=5.1.0
 
 # --- Планировщик задач ---
-apscheduler~=4.0.0
+apscheduler~=3.10.4 # ИСПРАВЛЕНО: Указана последняя стабильная версия 3.x.
 
 # --- Парсинг и обработка данных ---
 beautifulsoup4~=4.13.0
