feat: Implement full 'Genius 2.0' system

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# Файл зависимостей. Версии скорректированы для успешной сборки на Render.
-# Основное исправление - версия apscheduler.
+# Файл зависимостей. Финальная версия для гарантированной сборки на Render.
+# Основное исправление - версии numpy, matplotlib, scipy.
 
 # --- Ядро и фреймворк ---
 aiogram~=3.9.0
@@ -19,13 +19,13 @@ httpx~=0.27.0
 redis~=5.1.0
 
 # --- Планировщик задач ---
-apscheduler~=3.10.4 # ИСПРАВЛЕНО: Указана последняя стабильная версия 3.x.
+apscheduler~=3.10.4
 
 # --- Парсинг и обработка данных ---
 beautifulsoup4~=4.13.0
 lxml~=5.2.0
 
-# --- Научные вычисления и графики (если используются) ---
-matplotlib~=3.9.0
-numpy~=1.26.5
-scipy~=1.13.0
+# --- Научные вычисления и графики (стабильные версии для сборки) ---
+matplotlib~=3.7.5 # ИСПРАВЛЕНО: Стабильная версия
+numpy~=1.24.4    # ИСПРАВЛЕНО: Стабильная версия с широкой поддержкой pre-built wheels
+scipy~=1.11.4     # ИСПРАВЛЕНО: Стабильная версия
