feat: Implement full 'Genius 2.0' system

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Файл зависимостей. Финальная версия для гарантированной сборки на Render.
-# Основное исправление - версии numpy, matplotlib, scipy.
+# Удалена проблемная библиотека cchardet.
 
 # --- Ядро и фреймворк ---
 aiogram~=3.9.0
@@ -9,8 +9,7 @@ loguru~=0.7.2
 
 # --- Сетевое взаимодействие ---
 aiohttp~=3.9.5
-# Опциональные, но рекомендуемые зависимости для производительности aiohttp
-cchardet~=2.1.7
+# cchardet удален, так как требует компиляции и не является обязательным.
 aiodns~=3.2.0
 # Полезно иметь для синхронных/асинхронных запросов в других частях проекта
 httpx~=0.27.0
@@ -26,6 +25,6 @@ beautifulsoup4~=4.13.0
 lxml~=5.2.0
 
 # --- Научные вычисления и графики (стабильные версии для сборки) ---
-matplotlib~=3.7.5 # ИСПРАВЛЕНО: Стабильная версия
-numpy~=1.24.4    # ИСПРАВЛЕНО: Стабильная версия с широкой поддержкой pre-built wheels
-scipy~=1.11.4     # ИСПРАВЛЕНО: Стабильная версия
+matplotlib~=3.7.5
+numpy~=1.24.4
+scipy~=1.11.4
