Исправлен источник хешрейта на https://api.blockchain.info/q/hashrate

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
 # Файл зависимостей. Финальная версия для гарантированной сборки на Render.
-# Удалена проблемная библиотека cchardet.
+# Добавлен недостающий пакет pydantic-settings.
 
 # --- Ядро и фреймворк ---
 aiogram~=3.9.0
 pydantic~=2.8.2
+pydantic-settings~=2.3.4 # ИСПРАВЛЕНО: Добавлен недостающий пакет для работы с настройками
 python-dotenv~=1.1.1
 loguru~=0.7.2
 
 # --- Сетевое взаимодействие ---
 aiohttp~=3.9.5
-# cchardet удален, так как требует компиляции и не является обязательным.
 aiodns~=3.2.0
-# Полезно иметь для синхронных/асинхронных запросов в других частях проекта
 httpx~=0.27.0
 
 # --- База данных и кэширование ---
