Исправлен источник хешрейта на https://api.blockchain.info/q/hashrate

--- a/data/news_service_config.json
+++ b/data/news_service_config.json
@@ -1,4 +1,5 @@
 {
+  "subscription_ttl_seconds": 86400,
   "news_limit_per_source": 5,
-  "deduplication_ttl_seconds": 86400
+  "article_cache_ttl_seconds": 1800
 }
